# portfolio

./: Cargo.toml  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
app/blog/: page.tsx
components/: navbar.tsx
components/modules/blog/: author-section.tsx  blog-card.tsx
components/modules/home/: bio.tsx  connect.tsx
components/ui/: card.tsx  dotted-header.tsx
services/: octokit.ts
services/forem/: index.ts
services/forem/core/: CancelablePromise.ts  OpenAPI.ts
services/forem/models/: Article.ts  ArticleFlareTag.ts  ArticleIndex.ts  Comment.ts  DisplayAd.ts  FollowedTag.ts  Organization.ts  Page.ts  PodcastEpisodeIndex.ts  ProfileImage.ts  SharedOrganization.ts  SharedPodcast.ts  SharedUser.ts  Tag.ts  User.ts  UserInviteParam.ts  VideoArticle.ts  listingCategoryParam.ts  pageParam.ts  perPageParam10to1000.ts  perPageParam24to1000.ts  perPageParam30to100.ts  perPageParam30to1000.ts  perPageParam80to1000.ts
services/forem/services/: ArticlesService.ts  CommentsService.ts  DisplayAdsService.ts  FollowedTagsService.ts  FollowersService.ts  OrganizationsService.ts  PagesService.ts  PodcastEpisodesService.ts  ProfileImagesService.ts  ReactionsService.ts  ReadinglistService.ts  TagsService.ts  UsersService.ts  VideosService.ts
services/reactify/: reactify.ts
src/: main.rs
src/utils/: events.rs  mod.rs
src/views/: achievements.rs  help.rs  home.rs  plans.rs  profile_pic.rs  projects.rs  skills.rs  social.rs
utils/hooks/: use-disclosure.ts  use-image-color.ts
(+7 files in other folders)
