[package]
name = "portfolio"
version = "1.0.0"
authors = ["KRTirtho <krtirtho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
open = "1.7.0"
